# gg-evals

./: .gitignore  CONTRIBUTING.md  ETHOS.md  INSTALL_FOR_AGENTS.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
classifiers/: README.md  __init__.py
corpora/: README.md
corpora/assertion-auditor/: README.md  fixtures.jsonl
corpora/spec-drift/: README.md  fixtures.jsonl
docs/benchmarks/: 2026-05-09-assertion-auditor-regex-only.md  2026-05-09-spec-drift-keyword.md  README.md  latest-summary.md
eval/: __init__.py  cli.py
eval/runner/: __init__.py  all.py  assertion_auditor.py  common.py  judge.py  spec_drift.py
eval/runner/adapters/: __init__.py  assertion_auditor.py  base.py  spec_drift.py
eval/shared/: __init__.py  corpus.py  report.py  report_summary.py  scoring.py
scripts/: pre_push.sh  report_summary.py  run_all.sh
test/eval/: README.md  test_corpus.py  test_report.py  test_report_summary.py  test_runner.py  test_scoring.py
